# tao-cli

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.yaml  files.md  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: AUDIT_REPORT.md  CHAT_BEHAVIOR.md  DATA_SOURCES.md  EXAMPLES.md  EXECUTION_DEBUGGING.md  FIX_PLAN.md  RELEASE.md  WHAT_TO_COMMIT.md
src/taox/: __init__.py  cli.py
src/taox/chat/: __init__.py  context.py  intents.py  llm.py  llm_interpreter.py  prompts.py  router.py  state_machine.py
src/taox/commands/: __init__.py  batch.py  child.py  executor.py  recommend.py  register.py  stake.py  subnet.py  tx_pipeline.py  wallet.py  watch.py
src/taox/config/: __init__.py  settings.py
src/taox/data/: __init__.py  cache.py  history.py  sdk.py  snapshots.py  sources.py  taostats.py
src/taox/errors/: __init__.py  translator.py
src/taox/security/: __init__.py  confirm.py  credentials.py
src/taox/ui/: __init__.py  console.py  dashboard.py  onboarding.py  prompts.py  tables.py  theme.py
src/taox/utils/: __init__.py  errors.py
tests/: __init__.py  conftest.py  test_cache.py  test_doctor.py  test_error_translator.py  test_errors.py  test_executor.py  test_history.py  test_intents.py  test_llm_interpreter.py  test_recommend.py  test_router.py  test_snapshots.py  test_sources.py  test_state_machine.py  test_tx_pipeline.py  test_watch.py
