[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taox"
version = "0.1.0"
description = "AI-powered conversational CLI for Bittensor"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "taox contributors" }
]
keywords = ["bittensor", "cli", "ai", "tao", "blockchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Shells",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "InquirerPy>=0.3.4",
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "keyring>=24.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "cachetools>=5.3.0",
]

[project.optional-dependencies]
bittensor = [
    "bittensor>=8.0.0",
    "bittensor-wallet>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
taox = "taox.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/taox"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
